--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/ionic.menu.css" rel="stylesheet">
     -->
 
     <!-- ionic/angularjs js -->
@@ -18,10 +18,12 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+    <!-- your menu's js -->
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="components/menu/menu.js"></script>
+    <script src="components/playlists/playlists.js"></script>
+    <script src="components/playlist/playlist.js"></script>
   </head>
 
   <body ng-app="starter">
