--- a/www/index.html
+++ b/www/index.html
@@ -19,14 +19,14 @@
     <script src="cordova.js"></script>
 
     <!-- your menu's js -->
-    <script src="js/app.js"></script>
-    <script src="js/config.js"></script>
+    <script src="components/app/app.js"></script>
+    <script src="components/app/config.js"></script>
     <script src="components/menu/menu.js"></script>
     <script src="components/playlists/playlists.js"></script>
     <script src="components/playlist/playlist.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="app">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
